Début 2025- recadrage mémoire pour l'offre hors rue seulement

--- a/05-Introduction.tex
+++ b/05-Introduction.tex
@@ -16,7 +16,7 @@ Cette rationnelle bien intentionnée a eu de nombreuses conséquences malencontr
 
 Malgré ces coûts élevés, il n'existe pas d'inventaire complet des places de stationnements pour les municipalités québecoises, constituant un frein autant à la compréhension des enjeux qu'à l'établissement de politiques chiffrées permettant de mieux arbitrer les besoins d'entreposage de véhicules privés avec d'autres objectifs sociétaux comme la réduction des coûts totaux de transport, l'équité et la réduction des émissions de gaz à effet de serre. \par
 
-Cette thèse aura pour but de dresser un inventaire de l'offre de stationnement et de sa tarification pour la ville de Québec.
+
 
 %%
 %%  CONCEPTS DE BASE / BASIC CONCEPTS
@@ -65,64 +65,71 @@ Malgré les définitions posées à la section \ref{sec:typologie_stationnement}
 \subsection{Données}
 
 L'un des principaux problèmes à la mise en place d'un inventaire relate aux données. Des données directes sur l'offre de stationnement existent sous forme directe (plans de constructions, comptages) ou indirectes (panneaux de stationnements, données sur les bornes fontaines et les entrées charretières). Des données sur l'utilisation de stationnement existent aussi sous forme directe(relevés de transactions de parcomètres) ou indirectes(résultats d'enquête OD).\par
-L'accès à ces données ainsi que leur complétude est ici un enjeu, du fait de la protection de la vie privée, de la complétude et la précision des données obtenues et le format dans lequel elles sont disponibles (bases de données SIG, formats propriétaires de transaction, ortho-photos). Cette variabilité rend un portrait juste de la situation difficile à rendre.
+La disponibilité, la complétude, la précision et l'hétérogénéité des formats forment des barrières. D'autre part, des besoins variables d'agrégation pour différentes utilisations de la donnée rend une procédure universelle de traitement et de stockage difficile à élaboration. Ces facteurs rendent difficiles la reddition d'un portrait juste et adaptée aux besoins d'une intervention, soit elle politique, de terrain ou académique.
 
 \subsection{Enjeux}
 
-\textcite{Bourdeau:MethodologieAnalyse:2014} mentionne les enjeux reliés à la provision de  stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est devenue un enjeu de taille pour beaucoup de ménages, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, des coûts supplémentaires pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phage} \fg{} ainsi que la dilution de la base foncière pour financer cette infrastructure sont une double pénalité pour les finances des municipalités. 
+\textcite{Bourdeau:MethodologieAnalyse:2014} mentionne les enjeux reliés à la provision de  stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est perçu comme un enjeu de taille dans l'espace médiatique et politique, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, les coûts pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phages} \fg{} ainsi qu la dilution de la base foncière censée payer ces infrastructures sont une double pénalité pour les finances des municipalités. 
 %%% 
 % ETAT FINAL DESIRE
 %%%%%
 
 
 \section{L'outil d'analyse du stationnement idéal}
-Cette section va décrire une méthodologie d'analyse qui pourrait être utilisé par un praticien pour évaluer le stationnement, ces effets sur la mobilité et les externalités qui y sont reliés. Deux grands types d'analyses sont possible: un diagnostic de la situation actuelle et l'évaluation de changements de politique sur la mobilité des personnes et des marchandises ainsi que les externalités qui y sont reliées. Ce mémoire n'a pas pour but de faire l'ensemble de l'analyse mais cette section veut établir un cadre d'analyse global et illustrer les chainons manquants actuels et où il contribuera à cet ensemble global.
-    \subsection{Indicateurs pertinents}
+Cette section va décrire une méthodologie d'analyse qui pourrait être utilisé par un praticien pour évaluer le stationnement, ces effets sur la mobilité et les externalités qui y sont reliés. Deux grands types d'analyses sont possible: un diagnostic de la situation actuelle et l'évaluation de changements de politiques sur la mobilité des personnes et des marchandises ainsi que les externalités qui y sont reliées. Ce mémoire n'a pas pour but de faire l'ensemble de l'analyse mais cette section veut établir un cadre d'analyse global et illustrer les chaînons manquants actuels et où il contribuera à cet ensemble global.\par
 
-    \subsection{Diagnostique de l'état actuel}
-        \subsubsection{Étapes du diagnostic}
-        \subsubsection{Évaluation de l'offre}
-    \paragraph{Estimation de l'offre sur rue}
-    \paragraph{Analyse de la règlementation passée}
-    \paragraph{Estimation de la capacité par méthode règlementaire}
-    \paragraph{Estimation de la capacité par inventaire direct}
-    \paragraph{Estimation de la capacité par imagerie satellite}
-    \paragraph{Consolidation d'une estimation de capacité à partir des différentes méthodes d'estimation}
-        \subsubsection{Évaluation de la demande}
-    \paragraph{Estimation de la demande à partir des enquêtes OD}
-    \paragraph{Comptage manuel de véhicule sur le terrain}
-    \paragraph{Comptage automatisé des véhicules}
-      \subparagraph{Comptage par caméra sur véhicule gouvernemental}
-      \subparagraph{Comptage analyse d'image aéroportée}
-      \subparagraph{Comptage à partir de caméra de sécurité}
-      \subparagraph{Ajout de capteurs aux places de stationnement}
-        \subsubsection{Évaluation de l'utilisation de la capacité}
-        \subsubsection{Influence de l'utilisation de la capacité sur la mobilité des personnes}
-        \subsubsection{Évaluation des coûts de remplacement et d'opportunité de l'état actuel}
-        \subsubsection{Diagramme de la procédure de diagnostique}
-    \subsection{Évaluation de politiques futures}
-        \subsubsection{Élaboration de scénarios}
-        \subsubsection{Évaluation de l'effet des scénarios sur l'offre de stationnement}
-        \subsubsection{Évaluation de la variation de l'offre sur la mobilité des personnes}
-        \subsubsection{Évaluation des indicateurs de la mobilité sur l'effet}
-        \subsubsection{Diagramme de la méthodologie d'analyse}
+\hl{!!!!! À COMPLÉTER !!!!!}
+    %\subsection{Indicateurs pertinents}
+
+    %\subsection{Diagnostique de l'état actuel}
+    %    \subsubsection{Étapes du diagnostic}
+    %    \subsubsection{Évaluation de l'offre}
+    %\paragraph{Estimation de l'offre sur rue}
+    %\paragraph{Analyse de la règlementation passée}
+    %\paragraph{Estimation de la capacité par méthode règlementaire}
+    %\paragraph{Estimation de la capacité par inventaire direct}
+    %\paragraph{Estimation de la capacité par imagerie satellite}
+    %\paragraph{Consolidation d'une estimation de capacité à partir des différentes %méthodes d'estimation}
+    %    \subsubsection{Évaluation de la demande}
+    %\paragraph{Estimation de la demande à partir des enquêtes OD}
+    %\paragraph{Comptage manuel de véhicule sur le terrain}
+    %\paragraph{Comptage automatisé des véhicules}
+    %  \subparagraph{Comptage par caméra sur véhicule gouvernemental}
+    %  \subparagraph{Comptage analyse d'image aéroportée}
+    %  \subparagraph{Comptage à partir de caméra de sécurité}
+    %  \subparagraph{Ajout de capteurs aux places de stationnement}
+    %    \subsubsection{Évaluation de l'utilisation de la capacité}
+    %    \subsubsection{Influence de l'utilisation de la capacité sur la mobilité des %personnes}
+    %    \subsubsection{Évaluation des coûts de remplacement et d'opportunité de l'état actuel}
+    %    \subsubsection{Diagramme de la procédure de diagnostique}
+    %\subsection{Évaluation de politiques futures}
+    %    \subsubsection{Élaboration de scénarios}
+    %    \subsubsection{Évaluation de l'effet des scénarios sur l'offre de %stationnement}
+    %    \subsubsection{Évaluation de la variation de l'offre sur la mobilité des personnes}
+    %    \subsubsection{Évaluation des indicateurs de la mobilité sur l'effet}
+    %    \subsubsection{Diagramme de la méthodologie d'analyse}
 
 
 %%
 %% OBJECTIFS DE RECHERCHE / RESEARCH OBJECTIVES
 %%
-\section{Objectifs de recherche}  % 0.5 page
-L'objectif principal de la recherche est de développer un système d'information de l'offre  de stationnement dans le contexte de la Capitale-Nationale. Le système d'information devra lister le prix et la disponibilité temporelle des places de stationnement hors rue et sur rue. Les sous-objectifs suivants sont poursuivis :
+\section{Objectifs de recherche}  \label{sec:obj_recherche}% 0.5 page
+Cette thèse aura pour but de développer un système d'information capable de générer, stocker, valider et disséminer aux parties prenantes des estimés sur la capacité, la localisation et la tarification de places de stationnement hors-rue d'un territoire. Les sous-objectifs suivants sont poursuivis :
 
 \begin{enumerate}
-\item Créer un outil automatisé d'analyse d'image satellite pour recenser le stationnement hors-rue.
-\item Dresser un inventaire basé sur le code d'urbanisme et les données de rôle foncier.
+\item Développer un dispositif qui permet d'entreposer la réglementation sur le stationnement des municipalités 
+\item Développer une méthode d'inventaire du stationnement hors-rue basée sur la réglementation du point 1 et les données de rôle foncier.
+\item Créer un outil automatisé d'analyse d'image satellite pour recenser le stationnement hors-rue basé sur des méthodes d'apprentissage machine.
+\item Définir une structure de base de données qui permet d'inventorier le stationnement et de représenter visuellement la capacité de stationnement sur le territoire
+\item Valider les différentes méthodes d'estimations contre une réalité terrain pour valider la significativité statistique des estimés sur une variété de contexte géographiques et d'utilisation du sol
+\item Développer un interface facile d'utilisation qui permet à un praticien d'évaluer la capacité et de corriger les estimés au besoin
+\item Développer la structure d'un interface de programmation d'application pour que d'autres logiciels puisse valoriser la donnée dans les études de la mobilité
+\end{enumerate}
+En plus des objectifs principaux, deux objectifs étendus, désirables mais pas indispensables au mémoire sont disposés ci-dessous:
+\begin{enumerate}
 \item Adapter la méthode de \textcite{Bourdeau:MethodologieAnalyse:2014} au contexte de la capitale.
-\item Dresser un inventaire des coûts marginaux de provision de nouveaux stationnements et de coûts de maintenance directs(nettoyage, pavage) et indirects (Longueur du réseau routier supplémentaire, varation de la valeur foncière par acre en fonction de la provision de stationnement) du stationnement.
-\item Fusionner les sources de données mentionner ci-haut pour dresser un inventaire statistiquement significatif de la capacité de stationnement
 \item Établir des indicateurs d'utilisation de stationnement basé sur l'inventaire de stationnement et les données d'enquête origine-Destination en modifiant la méthodologie définie par \textcite{Diallo:MethodologyParking:2015}.
 \end{enumerate}
-
 %%
 %% PLAN DU MEMOIRE / THESIS OUTLINE
 %%
